Staging (#86)
* fix: Updated CI/CD pipeline and H2 startup

- Add initial schema (`schema.sql`) and test data (`data.sql`) scripts for easier development setup.
- Refactor Gradle build to streamline development and Docker tasks.
- Update `application-dev.properties` for H2 database initialization improvements.
- Enhance GitHub Actions workflows to use Tailscale for staging deployments and E2E testing.

* fix: reverting previous change to build.gradle

* fix: improve SSH handling and update npm version in CI/CD pipeline

- Simplify SSH configuration in deploy workflow for staging using direct commands.
- Add cleanup steps for SSH configuration to ensure security.
- Upgrade npm version to 11.6.0 in `build.gradle` for compatibility.

* fix: e2e testing was in the wrong spot

* fix: i dislike CI/CD

* fix: fixed path for app directory

* fix: updated docker compose command syntax

* fix: update staging IPs and version, add condition for frontend dependency install

* fix: update Tailscale IPs in staging Docker Compose file

* fix: churlish and deplorable

* fix: churlish and deplorable mk.2

* fix: rename database environment variables for mariadb

* fix: rename database environment variables

* fix: change docker compose command to include --remove-orphans

* fix: change docker compose env variables

* fix: deploy.yml change '' to "" at line 232

* fix: deploy.yml add escape characters

* fix: deploy.yml remove escape characters

* fix: initial versions of base classes and exceptions

- Added base classes for entity, controller, service, and repository packages
- Added example extensions of the base classes for the DTO, controller, entity, service, and repository classes
- Added exceptions for bad requests, business and conflict errors, forbidden access, resource not found, unauthorized access, and validation

* fix: added base testing infrastructure (WIP)
- Simplify page sorting defaults in `getAllExamples` method of `ExampleController`.
- Add `application-test.proper